Fix position, z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,21 +7,25 @@
 }
 .container {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-around;
 	max-width: 800px;
 	margin: 0 auto;
-	padding-top: 5px;
-	padding-left: 20px;
-	padding-right: 20px;
+	padding: 5px 20px 50px;
 }
 .box {
 	position: relative;
 	width: 240px;
 	height: auto;
 	z-index: 100;
+	margin-top: 5px;
+	padding-bottom: 190px;
 }
+	.box:hover {
+		z-index: 1000;
+	}
 .box__img {
-	position: absolute;
+	position: relative;
 	z-index: 10;
 	display: block;
 	box-shadow: 0 15px 15px 0px rgba(0, 0, 0, 0.4);
@@ -65,9 +69,9 @@
 }
 .box__title {
 	margin: 0;
+	margin-bottom: 20px;
 	padding-left: 10px;
 	padding-right: 10px;
-	margin-bottom: 20px;
 	text-align: center;
 	color: #a4a4a4;
 }
